# jkbmscpp

./: .gitignore  README.md  workflow_build.py
.github/workflows/: cpp_checks.yml
samples/: responses.txt
samples/esp32-cyd/: filter_src.py  platformio.ini
samples/esp32-cyd/include/: BleScanner.h  Display.h  NavigationController.h  ScanScreen.h  ScanScreenController.h  State.h  TouchController.h  ViewModel.h
samples/esp32-cyd/include/ble/: BleScanner.h  BleScannerBLEArduinoImpl.h  BleScannerNimBleImpl.h  JkBmsSourceBLEArduinoImpl.h
samples/esp32-cyd/include/screens/: DetailsScreen.h  ScanScreen.h  Screen.h  UiMappers.h
samples/esp32-cyd/include/usecases/: BleUseCases.h
samples/esp32-cyd/include/viewmodels/: DetailsScreenViewModel.h  ScanScreenViewModel.h  ViewModel.h
samples/esp32-cyd/src/: BleScanner.cpp  BleUseCases.cpp  ScanScreen.cpp  ScanScreenController.cpp  ScanScreenViewModel.cpp  TouchController.cpp  ViewModel.cpp  main.cpp
samples/esp32-cyd/src/ble/: BleScannerBLEArduinoImpl.cpp  BleScannerNimBleImpl.cpp  JkBmsSourceBLEArduinoImpl.cpp
samples/esp32-cyd/src/screens/: DetailsScreen.cpp  ScanScreen.cpp  UiMappers.cpp
samples/esp32-cyd/src/viewmodels/: DetailsScreenViewModel.cpp  ScanScreenViewModel.cpp  ViewModel.cpp
samples/simpleBleSample/: CMakeLists.txt
samples/simpleBleSample/include/: JkBmsSourceSimpleBleImpl.h
samples/simpleBleSample/src/: JkBmsSourceSimpleBleImpl.cpp  main.cpp
